--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,23 @@
 
 <% @articles.each do |article| %>
-<p class="title"><%= article.title %></p>
-<div class="body"><%= article.body %></div>
+  <p class="title"><%= article.title %></p>
+  <div class="body"><%= article.body %></div>
+
+  <%= form_for([article, article.comments.build]) do |f| %>
+    <div class="comment"><%= f.text_field :name, placeholder: 'enter your name' %></div>
+    <div class="comment"><%= f.text_area :body, placeholder: 'enter your comment' %></div>
+    <div class="comment"><%= f.submit %></div>
+  <% end %>
+
+  <% if article.comments.any? %>
+      <% article.comments.each do |comment| %>
+        <p><%= comment.name %></p>
+        <p><%= comment.body %></p>
+      <% end %>
+  <% end %>
 <% end %>
 
+
 <%= paginate @articles %>
+
+
