added go back to home button

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,6 +18,10 @@
           <p><%= comment.body %></p>
         <% end %>
       <% end %>
+
+      <%= link_to articles_path do %>
+          <div class="text-center my-2">Go back to home</div>
+        <% end %>
     </div>
     <div class="col-sm">
       ⭐︎Recent articles⭐︎
