--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,7 @@
 <h2>Add new articles</h2>
+<div class="d-flex justify-content-end mx-5">
+<%= button_to "logout", destroy_user_session_path, method: :delete, class:'btn btn-outline-danger' %>
+</div>
 <%= form_for :article, url: articles_path do |f| %>
   <p><%= f.text_field :title, placeholder: 'enter title' %></p>
   <p><%= f.text_area :body, placeholder: 'enter body text' %></p>
