--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,12 @@
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     <%= yield %>
+  
+    <footer class="footer mt-auto py-3 bg-light">
+      <div class="text-center">
+        <span class="text-muted">Copyright yukikomontrealblog. All rights reserved.</span>
+      </div>
+    </footer>
+</body>
   </body>
 </html>
