--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,6 +5,7 @@
 <%= form_for :article, url: articles_path do |f| %>
   <p><%= f.text_field :title, placeholder: 'enter title' %></p>
   <p><%= f.text_area :body, placeholder: 'enter body text' %></p>
+  <p><%= f.file_field :image %></p>
   <p><%= f.submit %></p>
 <% end %>
 
