--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,7 +24,7 @@
       <% end %>      
 
       <%= link_to articles_path do %>
-          <div class="text-center my-2">o back to home</div>
+          <div class="text-center my-2"> back to home</div>
         <% end %>
     </div>
     <div class="col-sm">
